--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="home">
     <nav id="navbar">
-        <div id="logo"><a href="index.html">MEME | <span class="text-primary"> internetový fenomén</span></a></div>
+        <div id="logo"><a href="index.html">MEM | <span class="text-primary"> internetový fenomén</span></a></div>
             <ul>
                 <li><a href="#home"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="#what">Co je to MEME?</a></li>
